--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ section {
 }
 
 .apresentation-image {
-	background-image: url("./imagens/capa-teste.jpg");
+	background-image: url("./imagens/capa.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
